--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -11,11 +11,15 @@
 
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
+    const message = (props) => {
+      return <div className="message">{props.children}</div>
+    }
     const element = (
       <div className="container">
-        <div className="message">Hello World</div>
-        <div className="message">Goodbye World</div>
+        {message({children: 'Hello World'})}
+        {message({children: 'Goodbye World'})}
       </div>
+      
     )
 
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
