--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -7,7 +7,8 @@
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
   <script type="text/babel">
-    // 🐨 Make a function called `message` which returns the JSX we want to share
+  
+  /* // 🐨 Make a function called `message` which returns the JSX we want to share
 
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
@@ -19,9 +20,19 @@
         {message({children: 'Hello World'})}
         {message({children: 'Goodbye World'})}
       </div>
-      
     )
+    */ 
+    // Extra Credit #1
+    const message = (props) => {
+      return <div className="message">{props.children}</div>
+    } 
 
+    const element = (
+      <div className="container">
+        {React.createElement(message, {children: "Hola World"})}
+        {React.createElement(message, {children: "Adios World"})}
+      </div>
+    )
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
     ReactDOM.render(element, document.getElementById('root'))
   </script>
