Add solution for Extra Credit 1

--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -29,8 +29,8 @@
 
     const element = (
       <div className="container">
-        {React.createElement(message, {children: "Hola World"})}
-        {React.createElement(message, {children: "Adios World"})}
+        {React.createElement(message, {children: "Hello World"})}
+        {React.createElement(message, {children: "Goodbye World"})}
       </div>
     )
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
