--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -6,6 +6,7 @@
   <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
   <script type="text/babel">
   
   /* // 🐨 Make a function called `message` which returns the JSX we want to share
@@ -46,7 +47,7 @@
         </div>
     )
     */ 
-   //Extra Credit #3
+   /* Extra Credit #3
     function Message({subject, greeting}) {
       return (
         <div className="message">
@@ -62,7 +63,7 @@
         } 
       },
     }
-    
+
     Message.propTypes = {
       greeting: PropTypes.string,
       subject: PropTypes.string,
@@ -74,6 +75,29 @@
         <Message greeting="Goodbye" subject="World" />
       </div>
     )
+  */
+
+  //Extra Credit #4
+  function Message({greeting, subject}) {
+    return (
+      <div className="message">
+        {greeting}, {subject}
+      </div>
+    )
+  }
+
+  Message.propTypes = {
+    greeting: PropTypes.string.isRequired,
+    subject: PropTypes.string.isRequired,
+  }
+
+  const element = (
+    <div className="container">
+      <Message greeting="Hello" subject="World" />
+      <Message greeting="Goodbye" subject="World" />
+    </div>
+  )
+
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
     ReactDOM.render(element, document.getElementById('root'))
   </script>
